--- a/TPs/1/index.html
+++ b/TPs/1/index.html
@@ -46,39 +46,40 @@
             <h1>Venta de Casas y Departamentos <br>Exclusivos de Lujo</h1>
         </div>
     </header>
-    <div class="container">
-        <section class="about">
-            <h2 class="title-2">Más Sobre Nosotros</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="./assets/img/icono1.svg" alt="Foto propiedad">
-                    <h3 class="title-3 uppercase">Seguridad</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores.
-                    </p>
-                </div>
-                <div class="col-md-4">
-                    <img src="./assets/img/icono2.svg" alt="Foto propiedad">
-                    <h3 class="title-3 uppercase">El mejor precio</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores.
-                    </p>
-                </div>
-                <div class="col-md-4">
-                    <img src="./assets/img/icono3.svg" alt="Foto propiedad">
-                    <h3 class="title-3 uppercase">A tiempo</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores.
-                    </p>
-                </div>
+    <section class="about container">
+        <h2 class="title-2">Más Sobre Nosotros</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="./assets/img/icono1.svg" alt="Foto propiedad">
+                <h3 class="title-3 uppercase">Seguridad</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores.
+                </p>
             </div>
-        </section>
-        <main class="properties">
-            <h2 class="title-2">Casas y Departamentos en Venta</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="./assets/img/anuncio1.jpg" alt="Foto propiedad">
+            <div class="col-md-4">
+                <img src="./assets/img/icono2.svg" alt="Foto propiedad">
+                <h3 class="title-3 uppercase">El mejor precio</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores.
+                </p>
+            </div>
+            <div class="col-md-4">
+                <img src="./assets/img/icono3.svg" alt="Foto propiedad">
+                <h3 class="title-3 uppercase">A tiempo</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores.
+                </p>
+            </div>
+        </div>
+    </section>
+    <main class="properties container">
+        <h2 class="title-2">Casas y Departamentos en Venta</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="./assets/img/anuncio1.jpg" alt="Foto propiedad">
+                <div class="info">
                     <h3 class="title-3">Casa de Lujo en el Lago</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores,
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab
+                        asperiores,
                         aliquid eveniet.</p>
-                    <span class="green">$450.000</span>
+                    <strong class="c-secondary">$450.000</strong>
                     <div class="row icons">
                         <div class="col"><img src="./assets/img/icono_wc.svg" alt=""> 3</div>
                         <div class="col"><img src="./assets/img/icono_estacionamiento.svg" alt=""> 3</div>
@@ -86,12 +87,15 @@
                     </div>
                     <button>Ver propiedad</button>
                 </div>
-                <div class="col-md-4">
-                    <img src="./assets/img/anuncio2.jpg" alt="Foto propiedad">
+            </div>
+            <div class="col-md-4">
+                <img src="./assets/img/anuncio2.jpg" alt="Foto propiedad">
+                <div class="info">
                     <h3 class="title-3">Casa Minimalista</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores,
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab
+                        asperiores,
                         aliquid eveniet.</p>
-                    <span class="green">$400.000</span>
+                    <strong class="c-secondary">$400.000</strong>
                     <div class="row icons">
                         <div class="col"><img src="./assets/img/icono_wc.svg" alt=""> 3</div>
                         <div class="col"><img src="./assets/img/icono_estacionamiento.svg" alt=""> 3</div>
@@ -99,12 +103,15 @@
                     </div>
                     <button>Ver propiedad</button>
                 </div>
-                <div class="col-md-4">
-                    <img src="./assets/img/anuncio3.jpg" alt="Foto propiedad">
+            </div>
+            <div class="col-md-4">
+                <img src="./assets/img/anuncio3.jpg" alt="Foto propiedad">
+                <div class="info">
                     <h3 class="title-3">Casa con Pileta</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores,
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab
+                        asperiores,
                         aliquid eveniet.</p>
-                    <span class="green">$375.000</span>
+                    <strong class="c-secondary">$375.000</strong>
                     <div class="row icons">
                         <div class="col"><img src="./assets/img/icono_wc.svg" alt=""> 3</div>
                         <div class="col"><img src="./assets/img/icono_estacionamiento.svg" alt=""> 3</div>
@@ -113,31 +120,68 @@
                     <button>Ver propiedad</button>
                 </div>
             </div>
-        </main>
+        </div>
+        <div class="all-container">
+            <button class="secondary">Ver todas</button>
+        </div>
+    </main>
+    <section class="contact">
+        <div class="container">
+            <h2>Encuentra la casa de tus sueños</h2>
+            <p>Llena el formulario de contacto y un asesor se pondrá en contacto la brevedad</p>
+            <button>Contactános</button>
+        </div>
+    </section>
+    <section class="blog-comments container">
+        <div class="row">
+            <div class="col-lg-8 blog">
+                <h2 class="title-2">Nuestro Blog</h2>
 
-        <section>
-            <h2 class="title-2">Blog</h2>
-            <div class="row">
-                <article class="col-md-8">
-                    <h3 class="title-3">sarasa</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores,
-                        aliquid eveniet aut perferendis commodi, beatae veritatis quis neque. Recusandae nesciunt a voluptates inventore aliquid,
-                        tempore
-                        repudiandae eligendi voluptatum. Error corporis illum animi in neque veritatis possimus officiis alias. Numquam itaque
-                        deleniti
-                        ducimus dolorem laboriosam saepe dolorum eum animi architecto provident. Harum voluptate sunt, nostrum et autem enim.
-                        Blanditiis
-                        quidem consequatur illum nihil, placeat, voluptatibus deleniti deserunt, ex aperiam perspiciatis eveniet sed quibusdam labore
-                        facilis ab accusamus omnis. Cum sint aliquid tempore tenetur ex necessitatibus quia asperiores excepturi hic labore. Cum, aut
-                        aliquam.</p>
+                <article class="row">
+                    <div class="col-sm-4 "><img src="./assets/img/blog1.jpg" alt="Foto propiedad"></div>
+                    <div class="col-sm-8 ">
+                        <h3 class="title-3">Terraza en el techo de tu casa</h3>
+                        <hr>
+                        <p>Escrito el: <strong class="c-secondary">20/10/2019</strong> por: <strong class="c-secondary">Admin</strong></p>
+                        <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorrando dinero</p>
+                    </div>
                 </article>
-                <aside class="col-md-4">
-                    dfsrfasdfzs
-                </aside>
+
+                <article class="row">
+                    <div class="col-sm-4 "><img src="./assets/img/blog2.jpg" alt="Foto propiedad"></div>
+                    <div class="col-sm-8 ">
+                        <h3 class="title-3">Guía para la decoración de tu hogar</h3>
+                        <hr>
+                        <p>Escrito el: <strong class="c-secondary">20/10/2019</strong> por: <strong class="c-secondary">Admin</strong></p>
+                        <p>Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio</p>
+                    </div>
+                </article>
+
             </div>
-        </section>
-    </div>
-    <footer>footer</footer>
+            <aside class="col-lg-4">
+                <h2 class="title-2">Comentarios</h2>
+                <div class="comments">
+                    <p>El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis
+                        expectativas.</p>
+                    <p>- Juan Perez</p>
+                </div>
+            </aside>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="./about.html"></a>Nosotros</li>
+                    <li><a href="./properties.html"></a>Anuncios</li>
+                    <li><a href="./blog.html"></a>Blog</li>
+                    <li><a href="./contact.html"></a>Contacto</li>
+                </ul>
+            </nav>
+            <div class="rigts"> Todos los Derechos Reservados 2019 ©</div>
+        </div>
+
+    </footer>
 
 </body>
 
