--- a/TPs/1/index.html
+++ b/TPs/1/index.html
@@ -10,11 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 
     <script src="./js/scripts.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
-        integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+        integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/css/theme.css">
-    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/grid.css"> -->
+    <link rel="stylesheet" type="text/css" href="./assets/css/grid.css">
 
     <!-- https://ogp.me/ -->
     <!-- facebook whatsapp -->
@@ -181,7 +181,7 @@
             <div class="rigts"> Todos los Derechos Reservados 2019 ©</div>
         </div>
 
-    </footer>
+    </footer> 
 
 </body>
 
