--- a/TPs/1/index.html
+++ b/TPs/1/index.html
@@ -10,11 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 
     <script src="./js/scripts.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
-        integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+        integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/css/theme.css">
-    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/grid.css"> -->
+    <link rel="stylesheet" type="text/css" href="./assets/css/grid.css">
 
     <!-- https://ogp.me/ -->
     <!-- facebook whatsapp -->
@@ -26,7 +26,33 @@
 </head>
 
 <body>
-    <header>
+    grow
+    <div class="linea">
+        <div class="columna">  texto </div>
+        <div class="columna grow-1"> texto </div>
+        <div class="columna grow-2"> texto </div>
+        
+    </div>
+    shrink
+    <div class="linea">
+        <div class="columna">  texto </div>
+        <div class="columna shrink-1"> texto </div>
+        <div class="columna shrink-2"> texto </div>
+    </div>
+    basis
+    <div class="linea">
+        <div class="columna">  texto </div>
+        <div class="columna basis-20"> texto </div>
+        <div class="columna basis-80"> texto </div>
+        
+    </div>
+    justify
+    <div class="linea justify">
+        <div class="columna">  texto </div>
+        <div class="columna "> texto </div>
+        <div class="columna "> texto </div>
+    </div>
+    <!-- <header>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -181,7 +207,7 @@
             <div class="rigts"> Todos los Derechos Reservados 2019 ©</div>
         </div>
 
-    </footer>
+    </footer> -->
 
 </body>
 
