--- a/TPs/1/index.html
+++ b/TPs/1/index.html
@@ -10,11 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 
     <script src="./js/scripts.js"></script>
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
-        integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./assets/css/theme.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/grid.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/theme.css">
 
     <!-- https://ogp.me/ -->
     <!-- facebook whatsapp -->
@@ -26,36 +24,10 @@
 </head>
 
 <body>
-    grow
-    <div class="linea">
-        <div class="columna">  texto </div>
-        <div class="columna grow-1"> texto </div>
-        <div class="columna grow-2"> texto </div>
-        
-    </div>
-    shrink
-    <div class="linea">
-        <div class="columna">  texto </div>
-        <div class="columna shrink-1"> texto </div>
-        <div class="columna shrink-2"> texto </div>
-    </div>
-    basis
-    <div class="linea">
-        <div class="columna">  texto </div>
-        <div class="columna basis-20"> texto </div>
-        <div class="columna basis-80"> texto </div>
-        
-    </div>
-    justify
-    <div class="linea justify">
-        <div class="columna">  texto </div>
-        <div class="columna "> texto </div>
-        <div class="columna "> texto </div>
-    </div>
-    <!-- <header>
+    <header>
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-12 md">
                     <div class="logo">
                         <a href="./"><img src="./assets/img/logo.svg" alt="logo"></a>
                     </div>
@@ -75,19 +47,19 @@
     <section class="about container">
         <h2 class="title-2">Más Sobre Nosotros</h2>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-4 md">
                 <img src="./assets/img/icono1.svg" alt="Foto propiedad">
                 <h3 class="title-3 uppercase">Seguridad</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores.
                 </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-4 md">
                 <img src="./assets/img/icono2.svg" alt="Foto propiedad">
                 <h3 class="title-3 uppercase">El mejor precio</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores.
                 </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-4 md">
                 <img src="./assets/img/icono3.svg" alt="Foto propiedad">
                 <h3 class="title-3 uppercase">A tiempo</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores.
@@ -98,7 +70,7 @@
     <main class="properties container">
         <h2 class="title-2">Casas y Departamentos en Venta</h2>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-4 md">
                 <img src="./assets/img/anuncio1.jpg" alt="Foto propiedad">
                 <div class="info">
                     <h3 class="title-3">Casa de Lujo en el Lago</h3>
@@ -114,7 +86,7 @@
                     <button>Ver propiedad</button>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-4 md">
                 <img src="./assets/img/anuncio2.jpg" alt="Foto propiedad">
                 <div class="info">
                     <h3 class="title-3">Casa Minimalista</h3>
@@ -130,7 +102,7 @@
                     <button>Ver propiedad</button>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-4 md">
                 <img src="./assets/img/anuncio3.jpg" alt="Foto propiedad">
                 <div class="info">
                     <h3 class="title-3">Casa con Pileta</h3>
@@ -160,12 +132,12 @@
     </section>
     <section class="blog-comments container">
         <div class="row">
-            <div class="col-lg-8 blog">
+            <div class="col-8 lg blog">
                 <h2 class="title-2">Nuestro Blog</h2>
 
                 <article class="row">
-                    <div class="col-sm-4 "><img src="./assets/img/blog1.jpg" alt="Foto propiedad"></div>
-                    <div class="col-sm-8 ">
+                    <div class="col-4 sm "><img src="./assets/img/blog1.jpg" alt="Foto propiedad"></div>
+                    <div class="col-8 sm ">
                         <h3 class="title-3">Terraza en el techo de tu casa</h3>
                         <hr>
                         <p>Escrito el: <strong class="c-secondary">20/10/2019</strong> por: <strong class="c-secondary">Admin</strong></p>
@@ -174,8 +146,8 @@
                 </article>
 
                 <article class="row">
-                    <div class="col-sm-4 "><img src="./assets/img/blog2.jpg" alt="Foto propiedad"></div>
-                    <div class="col-sm-8 ">
+                    <div class="col-4 sm "><img src="./assets/img/blog2.jpg" alt="Foto propiedad"></div>
+                    <div class="col-8 sm ">
                         <h3 class="title-3">Guía para la decoración de tu hogar</h3>
                         <hr>
                         <p>Escrito el: <strong class="c-secondary">20/10/2019</strong> por: <strong class="c-secondary">Admin</strong></p>
@@ -184,7 +156,7 @@
                 </article>
 
             </div>
-            <aside class="col-lg-4">
+            <aside class="col-4 lg">
                 <h2 class="title-2">Comentarios</h2>
                 <div class="comments">
                     <p>El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis
@@ -207,7 +179,7 @@
             <div class="rigts"> Todos los Derechos Reservados 2019 ©</div>
         </div>
 
-    </footer> -->
+    </footer>
 
 </body>
 
