--- a/clases/flex/index.html
+++ b/clases/flex/index.html
@@ -6,12 +6,13 @@
     <meta charset="UTF-8">
     <meta name="author" content="Diego Dalairac">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" type="text/css" href="./mixin.css">
     <link rel="stylesheet" type="text/css" href="./grid.css">
 </head>
 
 <body>
     flex-direction
-    <div class="linea flex-direction" style="background: none ;">
+    <div class="linea align-items flex-direction" style="background: none ;">
         <a href="http://www.flexboxdefense.com/">http://www.flexboxdefense.com/</a>
         <a href="https://flexboxfroggy.com/#es ">https://flexboxfroggy.com/#es </a>
         <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/-">https://css-tricks.com/snippets/css/a-guide-to-flexbox/-</a>
