--- a/TPs/1/index.html
+++ b/TPs/1/index.html
@@ -46,8 +46,8 @@
     </header>
     <section class="about container">
         <h2 class="title-2">Más Sobre Nosotros</h2>
-        <div class="row">
-            <div class="col-4 md">
+        <div class="row" id="aboutData">
+            <!-- <div class="col-4 md">
                 <img src="./assets/img/icono1.svg" alt="Foto propiedad">
                 <h3 class="title-3 uppercase">Seguridad</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores.
@@ -64,13 +64,13 @@
                 <h3 class="title-3 uppercase">A tiempo</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et ea. Corrupti voluptatem, dignissimos ipsa ab asperiores.
                 </p>
-            </div>
+            </div> -->
         </div>
     </section>
     <main class="properties container">
         <h2 class="title-2">Casas y Departamentos en Venta</h2>
-        <div class="row">
-            <div class="col-4 md">
+        <div class="row" id="propertiesData">
+            <!-- <div class="col-4 md">
                 <img src="./assets/img/anuncio1.jpg" alt="Foto propiedad">
                 <div class="info">
                     <h3 class="title-3">Casa de Lujo en el Lago</h3>
@@ -117,7 +117,7 @@
                     </div>
                     <button>Ver propiedad</button>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="all-container">
             <button class="secondary">Ver todas</button>
@@ -132,10 +132,10 @@
     </section>
     <section class="blog-comments container">
         <div class="row">
-            <div class="col-8 lg blog">
+            <div class="col-8 lg blog" id="blogData">
                 <h2 class="title-2">Nuestro Blog</h2>
 
-                <article class="row">
+                <!-- <article class="row">
                     <div class="col-4 sm "><img src="./assets/img/blog1.jpg" alt="Foto propiedad"></div>
                     <div class="col-8 sm ">
                         <h3 class="title-3">Terraza en el techo de tu casa</h3>
@@ -153,7 +153,7 @@
                         <p>Escrito el: <strong class="c-secondary">20/10/2019</strong> por: <strong class="c-secondary">Admin</strong></p>
                         <p>Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio</p>
                     </div>
-                </article>
+                </article> -->
 
             </div>
             <aside class="col-4 lg">
