--- a/TPs/1/index.html
+++ b/TPs/1/index.html
@@ -9,8 +9,7 @@
     <meta name="author" content="Diego Dalairac">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 
-    <script src="./js/rest.js"></script>
-    <script src="./js/scripts.js"></script>
+    <script src="./js/main.js" type="module"></script>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/css/grid.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/theme.css">
