--- a/parciales/practica1/index.html
+++ b/parciales/practica1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,63 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="./main.js" type="module"></script>
 </head>
+
 <body>
-    <div id="container"></div>
+    <div id="container">
+        <h1>Form alta</h1>
+        <form class="form" action="#" method="post">
+            <div class="field">
+                <label for="nombre">nombre</label>
+                <input type="text" id="nombre" name="nombre" value="" required>
+            </div>
+
+            <div class="field">
+                <label for="numero">numero</label>
+                <input type="number" id="numero" name="numero" value="" min="1" max="5" required>
+            </div>
+
+            <div class="field">
+                <label for="birthday">Birthday:</label>
+                <input type="date" id="birthday" name="birthday" min="2000-01-02" max="2020-12-31" required>
+            </div>
+
+            <div class="field">
+
+                <label for="email">Enter your email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+
+            <div class="field radio">
+                <input type="radio" id="male" name="gender" value="male" required>
+                <label for="male">Male</label>
+                <input type="radio" id="female" name="gender" value="female">
+                <label for="female">Female</label>
+                <input type="radio" id="other" name="gender" value="other">
+                <label for="other">Other</label>
+            </div>
+
+            <div class="field checkbox">
+                <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+                <label for="vehicle1"> I have a bike</label>
+            </div>
+
+            <div class="field">
+                <label for="lista">lista</label>
+                <select id="lista" name="lista">
+                    <option value="xxx">vvv</option>
+                    <option value="xxx">vvv</option>
+                    <option value="xxx">vvv</option>
+                </select>
+            </div>
+
+            <div class="field">
+                <label for="texto">texto</label>
+                <textarea id="texto" name="texto" rows="10" cols="30">The cat was playing in the garden.</textarea>
+            </div>
+
+            <button id="btnSubmit" type="submit">Guardar</button>
+        </form>
+    </div>
 </body>
+
 </html>
