--- a/parciales/practica1/index.html
+++ b/parciales/practica1/index.html
@@ -19,36 +19,37 @@
 
 <body>
     <div id="container">
-        <h1>Form alta</h1>
-        <form class="form" action="#" method="post">
+        <h1>Lab 3 Parcial</h1>
+        <form class="form close" action="#" method="post">
+            <h2>Alta</h2>
             <div class="field">
                 <label for="nombre">nombre</label>
-                <input type="text" id="nombre" name="nombre" value="" required>
+                <input placeholder="nombre" type="text" id="nombre" name="nombre" value="" required>
             </div>
 
             <div class="field">
                 <label for="numero">numero</label>
-                <input type="number" id="numero" name="numero" value="" min="1" max="5" required>
+                <input placeholder="numero" type="number" id="numero" name="numero" value="" min="1" max="5" required>
             </div>
 
             <div class="field">
                 <label for="birthday">Birthday:</label>
-                <input type="date" id="birthday" name="birthday" min="2000-01-02" max="2020-12-31" required>
-            </div>
-
-            <div class="field">
-
-                <label for="email">Enter your email:</label>
-                <input type="email" id="email" name="email" required>
+                <input placeholder="birthday" type="date" id="birthday" name="birthday" min="2000-01-02" max="2020-12-31" required>
             </div>
 
             <div class="field radio">
+                <p>Genero</p>
                 <input type="radio" id="male" name="gender" value="male" required>
                 <label for="male">Male</label>
                 <input type="radio" id="female" name="gender" value="female">
                 <label for="female">Female</label>
                 <input type="radio" id="other" name="gender" value="other">
                 <label for="other">Other</label>
+            </div>
+
+            <div class="field">
+                <label for="email">Enter your email:</label>
+                <input placeholder="email" type="email" id="email" name="email" required>
             </div>
 
             <div class="field checkbox">
@@ -67,12 +68,26 @@
 
             <div class="field">
                 <label for="texto">texto</label>
-                <textarea id="texto" name="texto" rows="10" cols="30">The cat was playing in the garden.</textarea>
+                <textarea placeholder="texto" id="texto" name="texto" rows="10" cols="30"></textarea>
             </div>
 
-            <button id="btnSubmit" type="submit">Guardar</button>
+
+            <div class="actions">
+                <button id="btnSubmit" type="submit" class="primary">Guardar</button>
+                <button id="btnRemove" class="primary outline">Eliminar</button>
+                <button id="btnCancel" class="primary outline">Cancelar</button>
+            </div>
+
         </form>
-    </div>
+        <!-- <button id="btnSubmit" class="primary">Guardar</button>
+            <button id="btnSubmit" class="primary outline">Guardar</button>
+            <button id="btnSubmit" class="secondary">Guardar</button>
+            <button id="btnSubmit" class="secondary outline">Guardar</button> -->
+
+
+
+    </div><!-- container -->
+
 </body>
 
 </html>
