--- a/parciales/practica1/index.html
+++ b/parciales/practica1/index.html
@@ -21,14 +21,17 @@
 <body>
     <div id="container">
         <h1>Lab 3 Parcial 
-            <button id="btnNew" class="secondary">Nuevo</button>
+            <button id="btnNew" class="secondary">Nuevo item <i class="fas fa-plus"></i> </button>
         </h1>
         <form class="form close" action="#" method="post">
             <button id="btnCancelX" class="btnClose"><i class="fas fa-times"></i></button>
-            <h2 id="formTitle">Alta</h2>
-            <div class="field">
+            <h2 id="formTitle"></h2>
+
+            <div class="fieldContainer"></div>
+ 
+            <!-- <div class="field">
                 <label for="nombre">nombre</label>
-                <input placeholder="nombre" type="text" id="nombre" name="nombre" value="" required>
+                <input placeholder="nombre" type="text" id="nombre" name="nombre" value="" required disabled>
             </div>
 
             <div class="field">
@@ -73,7 +76,7 @@
             <div class="field">
                 <label for="texto">texto</label>
                 <textarea placeholder="texto" id="texto" name="texto" rows="10" cols="30"></textarea>
-            </div>
+            </div>  -->
 
 
             <div class="actions">
