--- a/parciales/practica1/index.html
+++ b/parciales/practica1/index.html
@@ -21,11 +21,11 @@
 <body>
     <div id="container">
         <h1>Lab 3 Parcial 
-            <button id="btnNew" class="secondary">Nuevo item <i class="fas fa-plus"></i> </button>
+            <button id="btnNew" class="secondary" >Nuevo item <i class="fas fa-plus"></i> </button>
         </h1>
         <form class="form close" action="#" method="post">
-            <button id="btnCancelX" class="btnClose"><i class="fas fa-times"></i></button>
-            <h2 id="formTitle"></h2>
+            <button id="btnCancelX" class="btnClose" title="Cancelar"><i class="fas fa-times"></i></button>
+            <h2 id="formTitle">span</h2>
 
             <div class="fieldContainer"></div>
  
@@ -80,16 +80,12 @@
 
 
             <div class="actions">
-                <button id="btnSubmit" type="submit" class="primary">Guardar</button>
                 <button id="btnRemove" class="primary outline">Eliminar</button>
-                <button id="btnCancel" class="primary outline">Cancelar</button>
+                <button id="btnCancel" class="primary outline hidden">Cancelar</button>
+                <button id="btnSubmit" type="submit" class="primary">Guardar</button>
             </div>
 
         </form>
-        <!-- <button id="btnSubmit" class="primary">Guardar</button>
-            <button id="btnSubmit" class="primary outline">Guardar</button>
-            <button id="btnSubmit" class="secondary">Guardar</button>
-            <button id="btnSubmit" class="secondary outline">Guardar</button> -->
 
 
 
