conexion con api funcionando

--- a/parciales/practica1/index.html
+++ b/parciales/practica1/index.html
@@ -21,11 +21,11 @@
 <body>
     <div id="container">
         <h1>Lab 3 Parcial 
-            <button id="btnNew" class="secondary" >Nuevo item <i class="fas fa-plus"></i> </button>
+            <button id="btnNew" class="secondary" ><i class="fas fa-plus"></i> Nuevo item </button>
         </h1>
         <form class="form close" action="#" method="post">
             <button id="btnCancelX" class="btnClose" title="Cancelar"><i class="fas fa-times"></i></button>
-            <h2 id="formTitle">span</h2>
+            <h2 id="formTitle"></h2>
 
             <div class="fieldContainer"></div>
  
